--- a/views/animaldetail.pug
+++ b/views/animaldetail.pug
@@ -7,14 +7,14 @@ block content
  - let animalage = toShow.age
  div
     div.row
-      div(class='animalAttr mr-3') Animal Id is:
+      div(class='animalAttr detailAttr mr-3') Animal Id is:
       div #{animalid}
     div.row
-      div(class='animalAttr mr-3') Animal Type is:
+      div(class='animalAttr detailAttr mr-3') Animal Type is:
       div #{animal_type}
     div.row
-      div(class='animalAttr mr-3') Animal Name is:
+      div(class='animalAttr detailAttr mr-3') Animal Name is:
       div #{animalname}
     div.row
-      div(class='animalAttr mr-3') Animal Age is:
+      div(class='animalAttr detailAttr mr-3') Animal Age is:
       div #{animalage}
