--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,3 +11,9 @@ a {
   background-color: aquamarine;
   width: 120px;
 }
+
+.detailAttr {
+  align-items: center;
+  text-align: center;
+  align-content: center;
+}
