--- a/views/index.pug
+++ b/views/index.pug
@@ -1,20 +1,12 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to karunkumar25 #{title}
-  button(type="button",onclick="update()",class="btn btn-secondary") PressMe
-  <br><br>
-  
-  div(id="target") Display
-  a(Type="button", href="/animal") Click here for Animals
-
-
-  script.
-        let client_count=0;
-        function update()
-         {
-            client_count=client_count+1;
-            document.getElementById("target").innerHTML = "Value now "+client_count;
-
-         };
+extends layout 
+ 
+block content 
+  if (!user) 
+    a(href="/login") Login 
+    br 
+    a(href="/register") Register 
+  if (user) 
+    p You are currently logged in as #{user.username} 
+    a(href="/animal") Take me to animals 
+    br 
+    a(href="/logout") Logout 
